--- a/style.css
+++ b/style.css
@@ -23,10 +23,21 @@ html {
             transparent .3em
         ),
         radial-gradient(
-            circle at 1em
-
-        )
+            circle at 1em,
+            #000,
+            #000 .9em,
+            transparent 1em
+    );
         
+    background-position: 0.6em 0.35em, 0.7em 0.6em;
+    background-size: 2.75em; 2em;
+    background-repeat: repeat-x;
 
-    ;    
+    animation: eyes 2s cubic-bezier(.8, .02, .2, .96) infinite alternate;
+
+    @keyframes eyes {
+        to{
+            background-size: 2.75em 1.5em;
+        }
+    }
 }
