--- a/style.css
+++ b/style.css
@@ -30,10 +30,10 @@ html {
     );
         
     background-position: 0.6em 0.35em, 0.7em 0.6em;
-    background-size: 2.75em; 2em;
+    background-size: 2.75em 2em;
     background-repeat: repeat-x;
 
-    animation: eyes 2s cubic-bezier(.8, .02, .2, .96) infinite alternate;
+    animation:eyes 2s cubic-bezier(.8, .02, .2, .96) infinite alternate;
 
     @keyframes eyes {
         to{
