--- a/style.css
+++ b/style.css
@@ -5,7 +5,13 @@
 }
 
 html {
-    background: linear-gradient(to bottom right, #dde8e2aa, #ddd9c5aa);
+    background: linear-gradient(to bottom right, #ffffffaa, #d7dad7aa);
+    height: 100%;
+    display: flex;
+}
+
+body {
+    margin: auto;
 }
 
 .baby-yoda {
@@ -14,6 +20,9 @@ html {
     border-radius: 3em 3em 4.5em 4.5em;
     background: var(--green);
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 
     background-image:
         radial-gradient(
@@ -29,23 +38,57 @@ html {
             transparent 1em
         );
 
-    background-position: calc(0.6em - 0.5em) 0.35em, calc(0.7em - 0.5em) 0.6em;
+    background-position: calc(0.3em - 0.5em) 0.50em, calc(1.3em - 0.1em) 0.6em;
     background-size: 2.75em 2em;
     background-repeat: repeat-x;
 
-    animation: eyes 2s cubic-bezier(.8, .02, .2, .96) infinite alternate;
+    animation: eyes 3s cubic-bezier(.8, .02, .2, .96) infinite alternate;
 }
 
 @keyframes eyes {
     0% {
-        background-position: calc(0.6em - 0.05em) 0.35em, calc(0.7em - 0.05em) 0.6em;
+        background-position: calc(0.7em - 0.08em) 0.35em, calc(0.6em - 0.05em) 0.5em;
     }
     50% {
-        background-position: calc(0.6em + 0.05em) 0.35em, calc(0.7em + 0.05em) 0.6em;
+        background-position: calc(0.7em + 0.08em) 0.35em, calc(0.6em + 0.05em) 0.5em;
     }
     100% {
-        background-position: calc(0.6em - 0.05em) 0.35em, calc(0.7em - 0.05em) 0.6em;
+        background-position: calc(0.7em - 0.08em) 0.35em, calc(0.6em - 0.05em) 0.5em;
     }
 }
 
+.baby-yoda::before,
+.baby-yoda::after {
+    content: '';
+    display: block;
+    width: 5em;
+    height: 1.5em;
+    background: var(--pink);
+    border-top: solid .5em var(--green);
+    position: absolute;
+    top: 0.5em;
+    margin: 0 -1em;
+    z-index: -1;
+    border-radius: 2em 1em;
+    animation: ears 2s cubic-bezier(.8, .02, .2, .96) infinite alternate;
+}
 
+@keyframes ears {
+    to {
+        transform: rotate(var(--rotate));
+    }
+}
+
+.baby-yoda::before {
+    --rotate: 20deg;
+    transform-origin: center right;
+    right: 100%;
+    border-bottom-left-radius: 9em 4em;
+}
+
+.baby-yoda::after {
+    --rotate: -20deg;
+    transform-origin: center left;
+    left: 100%;
+    border-bottom-right-radius: 9em 4em;
+}
