--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
             transparent 1em
         );
 
-    background-position: calc(0.3em - 0.5em) 0.50em, calc(1.3em - 0.1em) 0.6em;
+    background-position: calc(0.7em) 0.35em, calc(0.6em) 0.5em;
     background-size: 2.75em 2em;
     background-repeat: repeat-x;
 
